# glosses4learning-cms

./: .gitignore  .gitmodules  README.md  agent_spec.md  electron.vite.config.ts  electron_spec.md  eslint.config.js  how_to_design.md  implementation_plan.md  main.py  package-lock.json  package.json  pyproject.toml  spec.md  tailwind.config.ts  tk_spec.md  tsconfig.json  tsconfig.node.json  tsconfig.web.json
agent/: cli.py  config.py  context.py  logging_config.py  main.py
agent/tools/: __init__.py
app/: main.ts  preload.ts
app/renderer/: App.vue  index.html  main.ts  router.ts  style.css
data/language/: arb.json  deu.json  eng.json
doc/: how_to_design.md  reference_what_is_a_valid_goal.md
doc/guide/: how_to_architect.md
doc/instructions/: 001_better_batch.md
doc/reference/: gloss_file.md  tree_logic.md
inspo/: gloss_form.html  gloss_list.html  gloss_model.py  gloss_relation_rows.py  layout.html  relation_ops.py  relations_types.py  situ_export.html  situ_export_1.md  situ_export_2.md  utils.py
notebooks/: situation_flow.ipynb
sbll_cms/: __init__.py  config.py  constants.py  gloss.py  language.py  relations.py  settings.py  situations_logic.py  storage.py  translation_tool.py  utils.py  views.py  views_htmx.py  views_settings.py  views_specialist.py
schema/: gloss.schema.json  language.schema.json
tk/: __init__.py  app.py  main.py  operations.py
tools_prompt/: break_up_glosses_prompt.py  break_up_parts_flow.py  common.py  logging_setup.py  main.py  menu.py  settings_flow.py  state_flow.py  tree_view_flow.py
tools_tk/: __init__.py
(+250 files in other folders)
