[project]
name = "sbll-cms"
version = "0.1.0"
description = "Language learning CMS with AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "openai>=2.9.0",
    "openai-agents>=0.6.3",
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "sanitize-filename>=1.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agent-run = "agent.cli:main"
